--- a/sections/product-recommendations.liquid
+++ b/sections/product-recommendations.liquid
@@ -1,9 +1,9 @@
 {%- if section.settings.show_product_recommendations -%}
   {%- if recommendations.performed -%}
     {%- if recommendations.products_count > 0 -%}
-      <hr>
+      <hr class="recommendations-separator">
       {%- if section.settings.heading != blank -%}
-        <h2 class="section-header__title h3">{{ section.settings.heading | escape }}</h2>
+        <h2 class="recommendations-title section-header__title h3">{{ section.settings.heading | escape }}</h2>
       {%- endif -%}
       <div class="grid grid--uniform">
         {%- assign grid_item_width = 'medium-up--one-quarter small--one-half' -%}
