--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -1,4 +1,8 @@
 <!-- /templates/product.liquid -->
+{%- assign use_pallet = false -%}
+{%- if product.tags contains 'pallet' -%}
+  {%- assign use_pallet = true -%}
+{%- endif -%}
 <div itemscope itemtype="http://schema.org/Product" id="ProductSection" data-section-id="{{ section.id }}" data-section-type="product-template" data-image-zoom-type="{{ section.settings.product_image_zoom_type }}" data-show-extra-tab="{{ section.settings.show_extra_tab }}" data-extra-tab-content="{{ section.settings.extra_tab_content }}" data-cart-enable-ajax="{{ settings.cart_enable_ajax }}" data-enable-history-state="true">
 
   <meta itemprop="name" content="{{ product.title }}">
@@ -56,7 +60,7 @@
           {% endcase %}
 
           {% for image in product.images %}
-            <li class="grid__item {{ thumbnail_width }}">
+            <li class="grid__item small--one-half medium-up--one-third">
               <a href="{{ image.src | img_url: 'grande' }}" class="product-single__thumbnail" data-image-id="{{ image.id }}">
                 <img src="{{ image.src | img_url: 'compact' }}" alt="{{ image.alt | escape }}">
               </a>
@@ -89,23 +93,28 @@
           <link itemprop="availability" href="http://schema.org/{% if current_variant.available %}InStock{% else %}OutOfStock{% endif %}">
 
           <p class="product-single__prices">
-            {% if product.compare_at_price_max > product.price %}
-              <span id="ComparePriceA11y" class="visually-hidden">{{ 'products.product.sale_price' | t }}</span>
-            {% else %}
-              <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
-            {% endif %}
-            <span id="ProductPrice" class="product-single__price" itemprop="price" content="{{ current_variant.price | divided_by: 100.00 }}">
-              {{ current_variant.price | money }}
-            </span>
+            {%- if use_pallet == true -%}
+              <span class="product-single__price js-current-price" itemprop="price" content="{{ current_variant.price | divided_by: 100.00 }}"></span>
+              <span class="product-single__price product-single__price--pallet js-current-price-text"><span class="primary-text">Shipping</span> calculated at checkout.</span>
+            {%- else -%}
+              {% if product.compare_at_price_max > product.price %}
+                <span id="ComparePriceA11y" class="visually-hidden">{{ 'products.product.sale_price' | t }}</span>
+              {% else %}
+                <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
+              {% endif %}
+              <span id="ProductPrice" class="product-single__price" itemprop="price" content="{{ current_variant.price | divided_by: 100.00 }}">
+                {{ current_variant.price | money }}
+              </span>
 
-            {% if product.compare_at_price_max > product.price %}
-              <span id="PriceA11y" class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
-              <s class="product-single__price--compare" id="ComparePrice">
-                {{ current_variant.compare_at_price | money }}
-              </s>
-            {% endif %}
+              {% if product.compare_at_price_max > product.price %}
+                <span id="PriceA11y" class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
+                <s class="product-single__price--compare" id="ComparePrice">
+                  {{ current_variant.compare_at_price | money }}
+                </s>
+              {% endif %}
 
-            {% include 'product-unit-price', variant: current_variant, available: true %}
+              {% include 'product-unit-price', variant: current_variant, available: true %}
+            {%- endif -%}
           </p>
 
           {%- if shop.taxes_included or shop.shipping_policy.body != blank -%}
@@ -118,16 +127,18 @@
               {%- endif -%}
             </div>
           {%- endif -%}
-          {%- assign productClasses = 'js-product-form product-form' -%}
+          {%- assign productClasses = 'js-product-form form form--product' -%}
           {%- if product.has_only_default_variant -%}
             {%- assign productClasses = productClasses | append: ' product-form--default-variant-only' -%}
           {%- endif -%}
 
           {% form 'product', product, class: productClasses, data-ajax-add-to-cart: true, data-product-id: product.id, data-enable-history-state: history_state_data %}
-            <select name="id" id="ProductSelect-{{ section.id }}" class="product-single__variants">
+            <select name="id" id="ProductSelect-{{ section.id }}" class="product-single__variants js-product-variants">
               {% for variant in product.variants %}
                 {% if variant.available %}
-                  <option {% if variant == product.selected_or_first_available_variant %} selected="selected" {% endif %} data-sku="{{ variant.sku }}" value="{{ variant.id }}">{{ variant.title }} - {{ variant.price | money_with_currency }}</option>
+                  <option {% if variant == product.selected_or_first_available_variant %} selected="selected" {% endif %} 
+                    {% if use_pallet == true %} data-sod-zips="{{ variant.metafields.sod.zips }}" data-price="{{ variant.price | money_with_currency }}"{% endif %}
+                    data-sku="{{ variant.sku }}" value="{{ variant.id }}">{{ variant.title }} - {{ variant.price | money_with_currency }}</option>
                 {% else %}
                   <option disabled="disabled">
                     {{ variant.title }} - {{ 'products.product.sold_out' | t }}
@@ -135,24 +146,35 @@
                 {% endif %}
               {% endfor %}
             </select>
+            {%- if use_pallet == true -%}
+              <label for="zip_code" class="form__label">{{ 'customer.addresses.zip' | t }}</label>
+              <input type="number" name="zip" id="zip_code" class="form__input full-width js-zip-code">
+            {%- endif -%}
 
-            {% if section.settings.product_quantity_enable %}
-              <div class="product-single__quantity">
-                <label for="Quantity">{{ 'products.product.quantity' | t }}</label>
-                <input type="number" id="Quantity" name="quantity" value="1" min="1">
-              </div>
-            {% endif %}
-
-            <div class="product-single__cart-submit-wrapper{% if section.settings.enable_payment_button %} product-single__shopify-payment-btn{% endif %}{% if section.settings.add_to_cart_width == 'full_width' %} product-form--full{% endif %}">
-              <button type="submit" name="add" id="AddToCart" class="btn product-single__cart-submit{% if section.settings.add_to_cart_width == 'full_width' %} btn--full{% endif %}{% if section.settings.enable_payment_button %} shopify-payment-btn btn--secondary{% endif %}" data-cart-url="{{ routes.cart_url }}">
-                <span id="AddToCartText">{{ 'products.product.add_to_cart' | t }}</span>
-              </button>
-              {% if section.settings.enable_payment_button %}
-                {{ form | payment_button }}
+            <div class="grid">
+              {% if section.settings.product_quantity_enable %}
+                <div class="grid__item medium-up--one-third">
+                  <label for="Quantity" class="form__label">{{ 'products.product.quantity' | t }}</label>
+                  <input type="number" id="Quantity" name="quantity" value="1" min="1"{% if use_pallet == true %} max="6"{% endif %} class="form__input full-width">
+                </div>
               {% endif %}
+              <div class="grid__item medium-up--two-thirds">
+                <div class="product-single__cart-submit-wrapper{% if section.settings.enable_payment_button %} product-single__shopify-payment-btn{% endif %}{% if section.settings.add_to_cart_width == 'full_width' %} product-form--full{% endif %}">
+                  <button type="submit" name="add" id="AddToCart"{% if use_pallet == true %} disabled{% endif %} class="js-product-submit btn product-single__cart-submit btn--full{% if section.settings.enable_payment_button %} shopify-payment-btn btn--secondary{% endif %}" data-cart-url="{{ routes.cart_url }}">
+                    <span id="AddToCartText">{{ 'products.product.add_to_cart' | t }}</span>
+                  </button>
+                  {% if section.settings.enable_payment_button %}
+                    {{ form | payment_button }}
+                  {% endif %}
+                </div>
+              </div>
             </div>
 
           {% endform %}
+          {%- if use_pallet == true -%}
+            <p class="product-single__pallet-msg product-single__pallet-msg--unavailable js-not-available-text hide">{{ 'products.product.pallet_unavailable_html' | t }}</p>
+            <p class="product-single__pallet-msg">{{ 'products.product.pallet_text_html' | t }}</p>
+          {%- endif -%}
 
         </div>
 
@@ -171,7 +193,42 @@
 
   {% if section.settings.product_description_position == 'below' %}
     {%- assign position = 'below' -%}
-    {% include 'product-description' %}
+    <div class="product-tabs">
+      <div class="grid grid--full product-tabs__tablist" role="tablist" aria-label="More product information">
+        <div class="grid__item medium-up--one-sixth">
+          <button class="product-tabs__button" role="tab" aria-selected="true" aria-controls="details-tab" id="details-tab-button">
+            {% render 'icon-features' %} Features
+          </button>
+        </div>
+        {%- if product.metafields.global.uses != blank -%}
+          <div class="grid__item medium-up--one-eighth">
+            <button class="product-tabs__button" role="tab" aria-selected="false" aria-controls="uses-tab" id="uses-tab-button" tabindex="-1">
+              {% render 'icon-info' %} Uses
+            </button>
+          </div>
+        {%- endif -%}
+        {%- if product.metafields.global.guides != blank -%}
+          <div class="grid__item medium-up--one-sixth">
+            <button class="product-tabs__button" role="tab" aria-selected="false" aria-controls="guides-tab" id="guides-tab-button" tabindex="-1">
+              {% render 'icon-guides' %} Guides
+            </button>
+          </div>
+        {%- endif -%}
+      </div>
+      <div class="product-tabs__tab" tabindex="0" role="tabpanel" id="details-tab" aria-labelledby="details-tab-button">
+        {% include 'product-description' %}
+      </div>
+      {%- if product.metafields.global.uses != blank  -%}
+        <div class="product-tabs__tab" tabindex="0" role="tabpanel" id="uses-tab" aria-labelledby="uses-tab-button" hidden>
+          {{product.metafields.global.uses}}
+        </div>
+      {%- endif -%}
+      {%- if product.metafields.global.guides != blank  -%}
+        <div class="product-tabs__tab" tabindex="0" role="tabpanel" id="guides-tab" aria-labelledby="guides-tab-button" hidden>
+          {{product.metafields.global.guides}}
+        </div>
+      {%- endif -%}
+    </div>
   {% endif %}
 </div>
 
@@ -180,7 +237,10 @@
     {{ product | json }}
   </script>
 {% endunless %}
-
+{%- if use_pallet == true -%}
+  <script>const isProductLimitedByZip = true;</script>
+  <style>.selector-wrapper {display: none;}</style>
+{%- endif -%}
 <script>
   // Override default values of shop.strings for each template.
   // Alternate product templates can change values of
@@ -289,6 +349,45 @@
         "zh-TW": "啟用產品分享"
       },
       "default": true
+    },
+    {
+      "type": "header",
+      "content": {
+        "en": "Pallets footer",
+        "es": "Pié de pagina de pallets"
+      }
+    },
+    {
+      "type": "image_picker",
+      "id": "sods_pallet_image",
+      "label": {
+        "en": "Image",
+        "es": "Imagen"
+      }
+    },
+    {
+      "type": "textarea",
+      "id": "sods_pallet_text",
+      "label": {
+        "en": "Text",
+        "es": "Texto"
+      }
+    },
+    {
+      "type": "text",
+      "id": "sods_pallet_button_text",
+      "label": {
+        "en": "Button text",
+        "es": "Texto del botón"
+      }
+    },
+    {
+      "type": "url",
+      "id": "sods_pallet_button_link",
+      "label": {
+        "en": "Button link",
+        "es": "Enlace del botón"
+      }
     },
     {
       "type": "header",
