--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -173,7 +173,10 @@
           {% endform %}
           {%- if use_pallet == true -%}
             <p class="product-single__pallet-msg product-single__pallet-msg--unavailable js-not-available-text hide">{{ 'products.product.pallet_unavailable_html' | t }}</p>
+            <p class="product-single__pallet-msg">{{ 'products.product.sod_picker_text_html' | t }}</p>
             <p class="product-single__pallet-msg">{{ 'products.product.pallet_text_html' | t }}</p>
+          {%- elsif product.type == 'Soil' -%}
+            <p class="product-single__pallet-msg">{{ 'products.product.soil_calculator_text_html' | t }}</p>
           {%- endif -%}
 
         </div>
