--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -51,128 +51,133 @@
   <div class="page-border"></div>
 {% endif %}
 
-<div class="site-wrapper{% unless use_full_wrapper %} site-wrapper--head{% endunless %} page-header">
-  <div class="top-bar grid">
-
-    <div class="grid__item medium-up--one-fifth small--one-half">
-      <div class="top-bar__search">
-        <a href="{{ routes.search_url }}" class="medium-up--hide">
-          {% include 'icon-search' %}
-        </a>
-        <form action="{{ routes.search_url }}" method="get" class="search-bar small--hide" role="search">
-          {% comment %}<input type="hidden" name="type" value="product">{% endcomment %}
-          <button type="submit" class="search-bar__submit">
-            {% include 'icon-search' %}
-            <span class="icon__fallback-text">{{ 'general.search.submit' | t }}</span>
-          </button>
-          <input type="search" name="q" class="search-bar__input" value="{{ search.terms | escape }}" placeholder="{{ 'general.search.placeholder' | t }}" aria-label="{{ 'general.search.placeholder' | t }}">
-        </form>
-      </div>
-    </div>
-
-    {% if shop.customer_accounts_enabled %}
-      <div class="grid__item medium-up--two-fifths small--hide">
-        <span class="customer-links small--hide">
-          {% if customer %}
-            {% if customer.first_name != blank %}
-              {% capture first_name %}<a href="{{ routes.account_url }}">{{ customer.first_name }}</a>{% endcapture %}
-              {{ 'layout.customer.logged_in_as_html' | t: first_name: first_name }}
-            {% else %}
-              <a href="{{ routes.account_url }}">{{ 'layout.customer.account' | t }}</a>
+<div class="top-bar page-header">
+  <div class="search-bar">
+    <div class="site-wrapper{% unless use_full_wrapper %} site-wrapper--head{% endunless %}">
+      <div class="grid">
+  
+        <div class="grid__item medium-up--three-quarters small--one-half">
+          <div class="top-bar__search">
+            <a href="{{ routes.search_url }}" class="medium-up--hide">
+              {% include 'icon-search' %}
+            </a>
+            <form action="{{ routes.search_url }}" method="get" class="form search-bar small--hide" role="search">
+              {% comment %}<input type="hidden" name="type" value="product">{% endcomment %}
+              <button type="submit" class="search-bar__submit">
+                {% include 'icon-search' %}
+                <span class="icon__fallback-text">{{ 'general.search.submit' | t }}</span>
+              </button>
+              <input type="search" name="q" class="form__input full-width" value="{{ search.terms | escape }}" placeholder="{{ 'general.search.placeholder' | t }}" aria-label="{{ 'general.search.placeholder' | t }}">
+            </form>
+          </div>
+        </div>
+        <div class="grid__item medium-up--one-quarter one-half">
+          <div class="grid">
+            <div class="grid__item medium-up--one-third text-right">
+              <div class="toolbar-cart">
+                <a class="current-cart {% if template != 'cart' %}toggle-cart-summary{% endif %}" href="{{ routes.cart_url }}">
+                  {%- comment -%}<span class="beside-svg"><span class="theme-money">{{ cart.total_price | money }}</span></span>{%- endcomment -%}
+                  <span class="current-cart-icon">
+                    {% render 'icon-cart' %}
+                    {{ 'layout.cart.title' | t }} ({{ cart.item_count }})
+                  </span>
+                </a>
+              </div>
+              {%- comment -%} <a href="{{ routes.cart_url }}" class="site-header__cart">
+                {% include 'icon-cart' %}
+                <span class="small--hide">
+                  {{ 'layout.cart.title' | t }}
+                  (<span id="CartCount">{{ cart.item_count }}</span>)
+                </span>
+              </a> {%- endcomment -%}
+            </div>
+            {% if shop.customer_accounts_enabled %}
+              <div class="grid__item two-thirds small--hide">
+                <div class="customer-links{% if customer %} customer-links--logged{% endif %} small--hide">
+                  {% if customer %}
+                    {% if customer.first_name != blank %}
+                      <a href="{{ routes.account_url }}" class="customer-links__account">{{ customer.first_name }} {{ customer.last_name }}</a>
+                    {% else %}
+                      <a href="{{ routes.account_url }}" class="customer-links__account">{{ 'layout.customer.account' | t }}</a>
+                    {% endif %}
+                    <!-- <br>
+                    {{ 'layout.customer.log_out' | t | customer_logout_link }} -->
+                  {% else %}
+                    {{ 'customer.login.sign_in' | t | customer_login_link | replace: 'href', 'class="btn btn--primary customer-login-link" href' }}
+                    {%- comment -%}<span class="vertical-divider"></span>
+                    {{ 'layout.customer.create_account' | t | customer_register_link }}{%- endcomment -%}
+                  {% endif %}
+                </div>
+              </div>
             {% endif %}
-            <span class="vertical-divider"></span>
-            {{ 'layout.customer.log_out' | t | customer_logout_link }}
-          {% else %}
-            {{ 'layout.customer.log_in' | t | customer_login_link }}
-            {%- comment -%}<span class="vertical-divider"></span>
-            {{ 'layout.customer.create_account' | t | customer_register_link }}{%- endcomment -%}
-          {% endif %}
-        </span>
+          </div>
+        </div>
       </div>
-    {% endif %}
-
-    <div class="grid__item {% if shop.customer_accounts_enabled %} medium-up--two-fifths {% else %} medium-up--four-fifths {% endif %} small--one-half text-right">
-      <span class="toolbar-cart">
-        <a class="current-cart {% if template != 'cart' %}toggle-cart-summary{% endif %}" href="{{ routes.cart_url }}">
-          <span class="beside-svg"><span class="theme-money">{{ cart.total_price | money }}</span></span>
-          <span class="current-cart-icon">
-            {% render 'svg-cart' %}
-            {% if cart.item_count > 0 %}
-              <span class="current-cart-count">{{ cart.item_count }}</span>
-            {% endif %}
-          </span>
-        </a>
-      </span>
-      {%- comment -%} <a href="{{ routes.cart_url }}" class="site-header__cart">
-        {% include 'icon-cart' %}
-        <span class="small--hide">
-          {{ 'layout.cart.title' | t }}
-          (<span id="CartCount">{{ cart.item_count }}</span>)
-        </span>
-      </a> {%- endcomment -%}
     </div>
   </div>
 
-  <hr class="small--hide hr--border">
-
-  <header class="site-header grid medium-up--grid--table" role="banner">
-    <div class="grid__item small--text-center">
-      <div itemscope itemtype="http://schema.org/Organization">
-        {% comment %}
-          Use the uploaded logo from theme settings if enabled.
-          Site name uses `h1` tag on homepage, div on other pages.
-        {% endcomment %}
-        {%- assign img_url = section.settings.logo | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
-
-        {% if section.settings.logo %}
-          <div id="HeaderLogoWrapper" class="supports-js">
-            <a href="{{ routes.root_url }}" itemprop="url" style="padding-top:{{ 1 | divided_by: section.settings.logo.aspect_ratio | times: 100}}%; display: block;">
-              <img id="HeaderLogo"
-                   class="lazyload"
-                   src="{{ section.settings.logo | img_url: '150x150' }}"
-                   data-src="{{ img_url }}"
-                   data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]"
-                   data-aspectratio="{{ product.featured_image.aspect_ratio }}"
-                   data-sizes="auto"
-                   alt="{{ section.settings.logo.alt | default: shop.name }}"
-                   itemprop="logo">
-            </a>
-          </div>
-          <noscript>
-            {% capture image_size %}{{ section.settings.logo_max_width | escape }}x{% endcapture %}
-            <a href="{{ routes.root_url }}" itemprop="url">
-              <img class="site-header__logo" src="{{ section.settings.logo | img_url: image_size }}"
-              srcset="{{ section.settings.logo | img_url: image_size }} 1x, {{ section.settings.logo | img_url: image_size, scale: 2 }} 2x"
-              alt="{{ section.settings.logo.alt | default: shop.name }}"
-              itemprop="logo">
-            </a>
-          </noscript>
-          {% if request.page_type == 'index' %}
-            <h1 class="visually-hidden">{{ shop.name }}</h1>
-          {% endif %}
-        {% else %}
-          {% if request.page_type == 'index' %}
-            <h1 class="site-header__site-name">
-              <a href="{{ routes.root_url }}" itemprop="url">{{ shop.name }}</a>
-            </h1>
-          {% else %}
-            <a href="{{ routes.root_url }}" class="site-header__site-name h1" itemprop="url">
-              {{ shop.name }}
-            </a>
-            {% if request.page_type == 'index' %}
-              <h1 class="visually-hidden">{{ shop.name }}</h1>
+  <header class="site-header" role="banner">
+    <div class="site-wrapper{% unless use_full_wrapper %} site-wrapper--head{% endunless %}">
+      <div class="grid medium-up--grid--table">
+        <div class="grid__item small--text-center">
+          <div itemscope itemtype="http://schema.org/Organization">
+            {% comment %}
+              Use the uploaded logo from theme settings if enabled.
+              Site name uses `h1` tag on homepage, div on other pages.
+            {% endcomment %}
+            {%- assign img_url = section.settings.logo | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
+    
+            {% if section.settings.logo %}
+              <div id="HeaderLogoWrapper" class="supports-js">
+                <a href="{{ routes.root_url }}" itemprop="url" style="padding-top:{{ 1 | divided_by: section.settings.logo.aspect_ratio | times: 100}}%; display: block;">
+                  <img id="HeaderLogo"
+                       class="lazyload"
+                       src="{{ section.settings.logo | img_url: '150x150' }}"
+                       data-src="{{ img_url }}"
+                       data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]"
+                       data-aspectratio="{{ product.featured_image.aspect_ratio }}"
+                       data-sizes="auto"
+                       alt="{{ section.settings.logo.alt | default: shop.name }}"
+                       itemprop="logo">
+                </a>
+              </div>
+              <noscript>
+                {% capture image_size %}{{ section.settings.logo_max_width | escape }}x{% endcapture %}
+                <a href="{{ routes.root_url }}" itemprop="url">
+                  <img class="site-header__logo" src="{{ section.settings.logo | img_url: image_size }}"
+                  srcset="{{ section.settings.logo | img_url: image_size }} 1x, {{ section.settings.logo | img_url: image_size, scale: 2 }} 2x"
+                  alt="{{ section.settings.logo.alt | default: shop.name }}"
+                  itemprop="logo">
+                </a>
+              </noscript>
+              {% if request.page_type == 'index' %}
+                <h1 class="visually-hidden">{{ shop.name }}</h1>
+              {% endif %}
+            {% else %}
+              {% if request.page_type == 'index' %}
+                <h1 class="site-header__site-name">
+                  <a href="{{ routes.root_url }}" itemprop="url">{{ shop.name }}</a>
+                </h1>
+              {% else %}
+                <a href="{{ routes.root_url }}" class="site-header__site-name h1" itemprop="url">
+                  {{ shop.name }}
+                </a>
+                {% if request.page_type == 'index' %}
+                  <h1 class="visually-hidden">{{ shop.name }}</h1>
+                {% endif %}
+              {% endif %}
             {% endif %}
-          {% endif %}
-        {% endif %}
+          </div>
+        </div>
+        {% unless section.settings.tagline == blank %}
+          <div class="grid__item medium-up--text-right small--text-center">
+            <div class="rte tagline">
+              {{ section.settings.tagline }}
+            </div>
+          </div>
+        {% endunless %}
       </div>
     </div>
-    {% unless section.settings.tagline == blank %}
-      <div class="grid__item medium-up--text-right small--text-center">
-        <div class="rte tagline">
-          {{ section.settings.tagline }}
-        </div>
-      </div>
-    {% endunless %}
   </header>
 </div>
 
