--- a/snippets/collection-grid-item.liquid
+++ b/snippets/collection-grid-item.liquid
@@ -1,16 +1,29 @@
-{% if collection.image %}
-  {%- assign collection_image = collection.image -%}
-{% elsif collection.products.first and collection.products.first.images != empty %}
-  {%- assign collection_image = collection.products.first.featured_image -%}
-{% else %}
-  {% assign collection_image = blank %}
-{% endif %}
-
+{%- if custom_collection_image == blank -%}
+  {%- if collection.image -%}
+    {%- assign collection_image = collection.image -%}
+  {%- elsif collection.products.first and collection.products.first.images != empty -%}
+    {%- assign collection_image = collection.products.first.featured_image -%}
+  {%- else -%}
+    {%- assign collection_image = blank -%}
+  {%- endif -%}
+{%- else -%}
+  {%- assign collection_image = custom_collection_image -%}
+{%- endif -%}
 <div class="collection-grid-item">
-  <a href="{% if collection.products == empty %}#{% else %}{{ collection.url }}{% endif %}" class="collection-grid-item__link">
+  <a href="{% if collection.products == empty %}#{% else %}{{ collection.url }}{% endif %}" class="collection-grid-item__link text-center">
+    {% if collection.title == blank %}{{ 'homepage.onboarding.collection_title' | t }}{% else %}{{ collection.title }}{% endif %}
+  </a>
+  <div class="collection-grid-item__items">
+    <picture>
+      <source media="(min-width: 750px)" srcset="{{ collection_image | img_url: 'master' }}">
+      <img src="{{ collection_image | img_url: '75x' }}" alt="featured image for {{collection.title}}" class="collection-grid-item__image">
+    </picture>
+    <p class="collection-grid-item__title">{% if collection.title == blank %}{{ 'homepage.onboarding.collection_title' | t }}{% else %}{{ collection.title }}{% endif %}</p>
+  </div>
+  <!-- <a href="{% if collection.products == empty %}#{% else %}{{ collection.url }}{% endif %}" class="collection-grid-item__link">
     {% unless collection_image == blank %}
       <div class="collection-grid-item__overlay lazyload"
-        data-bgset="{% include 'bgset', image: collection_image %}"
+        data-bgset="{% render 'bgset', image: collection_image %}"
         data-sizes="auto"
         data-parent-fit="cover">
       </div>
@@ -36,5 +49,5 @@
         {% endif %}
       </h3>
     </div>
-  </a>
+  </a> -->
 </div>
