--- a/assets/home.scss
+++ b/assets/home.scss
@@ -1,7 +1,17 @@
+$color-primary: #54A45B;
+$light-gray: #808080;
+
+$desk: 1100px;
 $tablet: 750px;
 
+.collection-list__title {
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 32px;
+}
+
 .rich-text {
-  color: #808080;
+  color: $light-gray;
   padding-bottom: 35px;
   padding-top: 35px;
 
@@ -20,5 +30,85 @@ $tablet: 750px;
 hr.hr--rich-text-bottom {
   @media all and (min-width: #{$tablet}) {
     margin-bottom: 60px;
+  }
+}
+
+.feature-row {
+  -webkit-align-items: flex-start;
+  align-items: flex-start;
+  margin-bottom: 30px;
+
+  @media all and (min-width: #{$tablet}) {
+    margin-bottom: 90px;
+  }
+}
+
+.feature-row__item {
+  @media all and (min-width: #{$tablet}) {
+    flex-basis: 45%;
+  }
+}
+
+.feature-row__title {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 23px;
+}
+
+.feature-row__text {
+  @media all and (min-width: #{$tablet}) {
+    flex-basis: 55%;
+    padding-top: 0;
+  }
+}
+
+.feature-row__subtext {
+  color: $light-gray;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.feature-row__image-container {
+  position: relative;
+}
+
+.feature-row__box-image {
+  margin-left: 18px;
+  position: relative;
+  z-index: 1;
+}
+
+.feature-row__box-image--right {
+  @media all and (min-width: #{$tablet}) {
+    margin-left: auto;
+    margin-right: 18px;
+  }
+}
+
+.feature-row__color-box {
+  background-color: $color-primary;
+  display: inline-block;
+  left: 0;
+  padding: 125px 0;
+  position: absolute;
+  right: 18px;
+  top: 18px;
+  z-index: 0;
+
+  @media all and (min-width: #{$tablet}) {
+    padding: 94px 126px;
+    right: auto;
+  }
+
+  @media all and (min-width: #{$desk}) {
+    padding: 131px 175px;
+    right: auto;
+  }
+}
+
+.feature-row__color-box--right {
+  @media all and (min-width: #{$tablet}) {
+    left: auto;
+    right: 0;
   }
 }
